[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Enemies/Elementals_Crystal_Mauler/animations/spritesheet/crystal_mauler_free_288x128_SpriteSheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/crystal_mauler/crystal_mauler.gd" type="Script" id=2]
[ext_resource path="res://general purpose/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://general purpose/hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="CapsuleShape2D" id=1]
height = 18.0

[sub_resource type="Animation" id=80]
resource_name = "RESET"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler/attack_1/hitbox/collision_1:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrystalMauler/attack_1/hitbox/collision_2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CrystalMauler/attack_1/hitbox/collision_3:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrystalMauler/attack_1/hitbox/collision_4:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrystalMauler/attack_1/hitbox/collision_5:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CrystalMauler/attack_1/hitbox/collision_6:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CrystalMauler/attack_1/hitbox/collision_7:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CrystalMauler/attack_1/hitbox/collision_8:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CrystalMauler/attack_1/hitbox/collision_9:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CrystalMauler/attack_1/hitbox/collision_10:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CrystalMauler/attack_1/hitbox/collision_11:disabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CrystalMauler/attack_2/hitbox/collision_1:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("CrystalMauler/attack_2/hitbox/collision_2:disabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("CrystalMauler/attack_2/hitbox/collision_3:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CrystalMauler/attack_2/hitbox/collision_4:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("CrystalMauler/attack_2/hitbox/collision_5:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=73]
resource_name = "attack"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 189, 190, 191, 192, 193, 194, 195, 196, 197, 198, 199, 200, 201, 202, 203, 204, 205 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrystalMauler/attack_1/hitbox/collision_1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CrystalMauler/attack_1/hitbox/collision_1:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrystalMauler/attack_1/hitbox/collision_2:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrystalMauler/attack_1/hitbox/collision_2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CrystalMauler/attack_1/hitbox/collision_3:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CrystalMauler/attack_1/hitbox/collision_3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CrystalMauler/attack_1/hitbox/collision_4:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CrystalMauler/attack_1/hitbox/collision_4:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CrystalMauler/attack_1/hitbox/collision_5:disabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CrystalMauler/attack_1/hitbox/collision_5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.5, 0.6, 0.7, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("CrystalMauler/attack_1/hitbox/collision_6:disabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("CrystalMauler/attack_1/hitbox/collision_6:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("CrystalMauler/attack_1/hitbox/collision_7:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true, true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("CrystalMauler/attack_1/hitbox/collision_7:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false, false ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("CrystalMauler/attack_1/hitbox/collision_8:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.2, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true, true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("CrystalMauler/attack_1/hitbox/collision_8:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.2, 1.3, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false, false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("CrystalMauler/attack_1/hitbox/collision_9:disabled")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 1.2, 1.3, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("CrystalMauler/attack_1/hitbox/collision_9:visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1.2, 1.3, 1.4, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("CrystalMauler/attack_1/hitbox/collision_10:disabled")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1.3, 1.4, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("CrystalMauler/attack_1/hitbox/collision_10:visible")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 1.3, 1.4, 1.5, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("CrystalMauler/attack_1/hitbox/collision_11:disabled")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("CrystalMauler/attack_1/hitbox/collision_11:visible")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 1.4, 1.5, 1.6, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false ]
}

[sub_resource type="Animation" id=74]
resource_name = "attacktop"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 210, 211, 212, 213, 214, 215, 216, 217, 218, 219, 220, 221, 222, 223, 224 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrystalMauler/attack_2/hitbox/collision_1:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CrystalMauler/attack_2/hitbox/collision_2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true, false, true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrystalMauler/attack_2/hitbox/collision_3:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CrystalMauler/attack_2/hitbox/collision_4:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CrystalMauler/attack_2/hitbox/collision_5:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, true, false, true, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CrystalMauler/attack_2/hitbox/collision_1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CrystalMauler/attack_2/hitbox/collision_2:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false, false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CrystalMauler/attack_2/hitbox/collision_3:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CrystalMauler/attack_2/hitbox/collision_4:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CrystalMauler/attack_2/hitbox/collision_5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, false, true, false ]
}

[sub_resource type="Animation" id=75]
resource_name = "death"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 273, 274, 275, 276, 277, 278, 279, 280, 281, 282, 283, 284, 285, 286, 287 ]
}

[sub_resource type="Animation" id=76]
resource_name = "hit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 252, 253, 254, 255, 256, 257 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CrystalMauler:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}

[sub_resource type="Animation" id=77]
resource_name = "idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=78]
resource_name = "run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("CrystalMauler:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 22, 23, 24, 25, 26, 27, 28 ]
}

[sub_resource type="CapsuleShape2D" id=79]
radius = 11.0

[sub_resource type="CapsuleShape2D" id=72]
radius = 11.0
height = 18.0

[node name="crystal_mauler" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="CrystalMauler" type="Sprite" parent="."]
position = Vector2( -1, -46 )
texture = ExtResource( 1 )
hframes = 21
vframes = 14
frame = 189

[node name="attack_1" type="Node2D" parent="CrystalMauler"]
position = Vector2( 1, 46 )

[node name="hitbox" parent="CrystalMauler/attack_1" instance=ExtResource( 4 )]
damage = 1
attacktype = "ongoing"
damage_interval = 1.0

[node name="collision_1" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 12, 17, 41, 18, 45, 9, 39, 2, 23, 2, 21, 10 )
disabled = true

[node name="collision_2" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 26, 17, 52, 18, 58, 10, 53, 4, 37, 4, 32, 10 )
disabled = true

[node name="collision_3" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 40, 17, 66, 17, 67, 10, 60, 2, 54, 2, 51, 4 )
disabled = true

[node name="collision_4" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 42, 18, 79, 18, 81, 15, 78, 7, 69, 1, 62, 1, 57, 11 )
disabled = true

[node name="collision_5" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 55, 17, 92, 18, 95, 14, 86, -3, 77, -3 )
disabled = true

[node name="collision_6" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 39, 19, 114, 19, 116, 14, 100, -8, 90, -8, 67, 16, 61, 16, 50, 0, 37, 8 )
disabled = true

[node name="collision_7" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 35, 16, 124, 19, 125, 14, 102, -17, 87, -12, 70, 6, 63, 3, 54, 6, 50, 10, 49, -12, 37, -4 )
disabled = true

[node name="collision_8" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 64, 17, 125, 19, 129, 7, 135, -6, 109, -46, 83, -29, 61, -13, 61, 9 )
disabled = true

[node name="collision_9" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 67, 18, 124, 18, 107, -4, 98, -8, 89, -6, 80, -1, 69, 12 )
disabled = true

[node name="collision_10" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 76, 18, 120, 18, 102, 2, 94, 3, 78, 13 )
disabled = true

[node name="collision_11" type="CollisionPolygon2D" parent="CrystalMauler/attack_1/hitbox"]
visible = false
polygon = PoolVector2Array( 78, 17, 117, 18, 106, 8, 91, 10 )
disabled = true

[node name="attack_2" type="Node2D" parent="CrystalMauler"]
position = Vector2( 1, 46 )

[node name="hitbox" parent="CrystalMauler/attack_2" instance=ExtResource( 4 )]
damage = 1
attacktype = "ongoing"
damage_interval = 1.0

[node name="collision_1" type="CollisionPolygon2D" parent="CrystalMauler/attack_2/hitbox"]
visible = false
polygon = PoolVector2Array( 29, -10, 20, 15, 63, 18, 61, -14, 14, -41, 1, -33 )
disabled = true

[node name="collision_2" type="CollisionPolygon2D" parent="CrystalMauler/attack_2/hitbox"]
visible = false
polygon = PoolVector2Array( 11, 18, 137, 19, 139, 4, 137, -16, 133, -50, 117, -61, 88, -63, 49, -18, 32, -28, 15, -38, 0, -34, -5, -27, 10, -17, 17, 6 )
disabled = true

[node name="collision_3" type="CollisionPolygon2D" parent="CrystalMauler/attack_2/hitbox"]
visible = false
polygon = PoolVector2Array( 13, 17, 140, 19, 144, 5, 139, -12, 134, -28, 131, -36, 128, -43, 130, -56, 133, -76, 125, -76, 111, -64, 104, -66, 99, -76, 90, -92, 79, -79, 69, -59, 52, -38, 41, -22, 31, -9, 24, -27, 20, -38, 4, -35, -5, -30, 7, -21, 13, -14, 18, 0 )
disabled = true

[node name="collision_4" type="CollisionPolygon2D" parent="CrystalMauler/attack_2/hitbox"]
visible = false
polygon = PoolVector2Array( 16, 18, 122, 18, 126, 13, 122, 5, 74, -20, 58, -14, 45, 3, 32, 13, 25, 4, 24, -17, 16, -27, 2, -41, -10, -25, 9, -20, 16, -5, 15, 4 )
disabled = true

[node name="collision_5" type="CollisionPolygon2D" parent="CrystalMauler/attack_2/hitbox"]
visible = false
polygon = PoolVector2Array( 44, 18, 118, 19, 121, 15, 116, 11, 110, 8, 104, 5, 98, 9, 93, 6, 83, 5, 49, 6 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 80 )
anims/attack = SubResource( 73 )
anims/attacktop = SubResource( 74 )
anims/death = SubResource( 75 )
anims/hit = SubResource( 76 )
anims/idle = SubResource( 77 )
anims/run = SubResource( 78 )

[node name="hitbox" parent="." instance=ExtResource( 4 )]
damage = 1

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 79 )

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
collision_mask = 16384
parent = NodePath("..")

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 72 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 120, 0 )

[node name="attack_timer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="hit" from="hurtbox" to="." method="_on_hurtbox_hit"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]

[editable path="CrystalMauler/attack_1/hitbox"]
[editable path="CrystalMauler/attack_2/hitbox"]
[editable path="hitbox"]
[editable path="hurtbox"]
